# report

./: .gitignore  .report  LICENSE  README.md  justfile  pyproject.toml  todo.txt
examples_reports/megareport/: 2024_11_30_megareport.py  report.html
examples_reports/text/: report.html
examples_reports/text_and_figure/: report.html
examples_src/: 2024_11_30_megareport.py  2024_11_30_text.py  2024_11_30_text_and_figure.py  2024_11_30_text_figure_and_table.py
report/: app.py  base.py  block.py  template.py  util.py
tests/: test_blocks.py
