[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "report"
version = "0.0.1"
description = "yobibyte's reports library"
readme = "README.md"
dependencies = [
  "matplotlib",
  "numpy",
  "jinja2",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
report = "report.base:main"
